using commands in summary tables

--- a/summarize/table.tex
+++ b/summarize/table.tex
@@ -2,96 +2,96 @@
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
-\header{Conf}&3&&\\
-\header{Cover}&1&3&5\\
-\header{Order}&&1&2\\
-\header{Src}&6&6&6\\
-\header{Std}&3&1&2\\
-\header{Struc}&1&2&2\\
-\header{Test}&5&5&6\\
-\header{Trc}&5&5&4\\
-\header{iFL}&&2&3\\
+\header{\dbgstratAddDbg}&&1&1\\
+\header{\dbgstratDrilldn}&2&2&2\\
+\header{\dbgstratDrillup}&4&4&5\\
+\header{\dbgstratRefact}&1&&\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{By IDE} aspect}
+\caption{Count of categories during various sections regarding \enquote{\dbgstrat} aspect}
 \end{table}
 \begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
-\header{AddDbg}&&1&1\\
-\header{DrillDn}&2&2&2\\
-\header{DrillUp}&4&4&5\\
-\header{Refact}&1&&\\
+\header{\dbgstyleInt}&4&3&3\\
+\header{\dbgstyleMan}&6&5&5\\
+\header{\dbgstyleSoc}&5&1&2\\
+\header{\dbgstyleTool}&1&5&6\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{Debugging strategies} aspect}
+\caption{Count of categories during various sections regarding \enquote{\dbgstyle} aspect}
 \end{table}
 \begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
-\header{IntDeb}&4&3&3\\
-\header{ManDeb}&6&5&5\\
-\header{SocDeb}&5&1&2\\
-\header{ToolDeb}&1&5&6\\
+\header{\divergConf}&2&4&3\\
+\header{\divergCons}&1&6&5\\
+\header{\divergReady}&&2&4\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{Debugging styles} aspect}
+\caption{Count of categories during various sections regarding \enquote{\diverg} aspect}
 \end{table}
 \begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
-\header{Conf}&2&4&3\\
-\header{Cons}&1&6&5\\
-\header{Ready}&&2&4\\
+\header{\easeverbBrainDmp}&2&3&3\\
+\header{\easeverbGener}&1&1&\\
+\header{\easeverbInacc}&5&4&4\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{Diverging from routine} aspect}
+\caption{Count of categories during various sections regarding \enquote{\easeverb} aspect}
 \end{table}
 \begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
-\header{Braindump}&2&3&3\\
-\header{General}&1&1&\\
-\header{InacProc}&5&4&4\\
+\header{\inftopComm}&&&1\\
+\header{\inftopRel}&6&6&5\\
+\header{\inftopSpec}&5&1&2\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{Ease of verbalization} aspect}
+\caption{Count of categories during various sections regarding \enquote{\inftop} aspect}
 \end{table}
 \begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
-\header{Comm}&6&1&3\\
-\header{Exp}&2&2&2\\
-\header{Offic}&1&&\\
+\header{\infuseAPrio}&6&3&4\\
+\header{\infuseFurth}&&&1\\
+\header{\infuseInt}&&3&4\\
+\header{\infuseUsels}&&1&1\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{External sources} aspect}
+\caption{Count of categories during various sections regarding \enquote{\infuse} aspect}
 \end{table}
 \begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
-\header{CommKnow}&&&1\\
-\header{RelCode}&6&6&5\\
-\header{SpecKnow}&5&1&2\\
+\header{\srcextComm}&6&1&3\\
+\header{\srcextExp}&2&2&2\\
+\header{\srcextOff}&1&&\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{Information topic} aspect}
+\caption{Count of categories during various sections regarding \enquote{\srcext} aspect}
 \end{table}
 \begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
-\header{APrio}&6&3&4\\
-\header{Furth}&&&1\\
-\header{Integ}&&3&4\\
-\header{Usels}&&1&1\\
+\header{\srcideCover}&1&3&5\\
+\header{\srcideIfl}&&2&3\\
+\header{\srcideOrder}&&1&2\\
+\header{\srcideSets}&3&&\\
+\header{\srcideSrc}&6&6&6\\
+\header{\srcideStd}&3&1&2\\
+\header{\srcideStruc}&1&2&2\\
+\header{\srcideTest}&5&5&6\\
+\header{\srcideTrc}&5&5&4\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{Utilization} aspect}
+\caption{Count of categories during various sections regarding \enquote{\srcide} aspect}
 \end{table}
