refactoring preprocessing code and including readable raw data

--- a/preprocessing/table.tex
+++ b/preprocessing/table.tex
@@ -1,5 +1,4 @@
-
-
+\begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
@@ -9,10 +8,9 @@
 \header{\dbgstratRefact}&1&&\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{\dbgstrat} aspect}
+\caption{Count of categories during various phases regarding \enquote{\dbgstrat} aspect}
 \end{table}
-
-
+\begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
@@ -22,10 +20,9 @@
 \header{\dbgstyleTool}&1&5&6\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{\dbgstyle} aspect}
+\caption{Count of categories during various phases regarding \enquote{\dbgstyle} aspect}
 \end{table}
-
-
+\begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
@@ -34,10 +31,9 @@
 \header{\divergReady}&&2&4\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{\diverg} aspect}
+\caption{Count of categories during various phases regarding \enquote{\diverg} aspect}
 \end{table}
-
-
+\begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
@@ -46,10 +42,9 @@
 \header{\easeverbInacc}&5&4&4\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{\easeverb} aspect}
+\caption{Count of categories during various phases regarding \enquote{\easeverb} aspect}
 \end{table}
-
-
+\begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
@@ -58,10 +53,9 @@
 \header{\inftopSpec}&5&1&2\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{\inftop} aspect}
+\caption{Count of categories during various phases regarding \enquote{\inftop} aspect}
 \end{table}
-
-
+\begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
@@ -71,10 +65,9 @@
 \header{\infuseUsels}&&1&1\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{\infuse} aspect}
+\caption{Count of categories during various phases regarding \enquote{\infuse} aspect}
 \end{table}
-
-
+\begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
@@ -83,10 +76,9 @@
 \header{\srcextOff}&1&&\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{\srcext} aspect}
+\caption{Count of categories during various phases regarding \enquote{\srcext} aspect}
 \end{table}
-
-
+\begin{table}\centering
 \begin{tabular}{@{}lccc@{}}
 \toprule
 &\header{routine}&\header{feature}&\header{use-case}\\\midrule
@@ -100,5 +92,5 @@
 \header{\srcideTrc}&5&5&4\\
 \bottomrule
 \end{tabular}
-\caption{Count of categories during various sections regarding \enquote{\srcide} aspect}
+\caption{Count of categories during various phases regarding \enquote{\srcide} aspect}
 \end{table}
